Complex changes after code review (Form Request, etc)
